# OpenAI-Whisper-AnySoftKeyboard

./: .gitignore  BUILDING.md  CONTRIBUTING.md  FDROID_PUBLISHING.md  README.md  TODO.md  fix_plan.md  instance  mike_rozoff_layout.xml  mike_rozoff_symbols.xml  mike_rozoff_symbols_extended.xml  package.json  plan.md  plan_add-on_class.md  proposal.md  rebrand_plan.md  settings.gradle  setup_anysoftkeyboard_english.sh  suggestions-progress.md
addons/gradle/: add_on_list_generator.gradle  pack_apk.gradle
addons/languages/demo_ui_card_addon/apk/: build.gradle
addons/languages/demo_ui_card_addon/pack/: build.gradle
addons/languages/demo_ui_card_addon/src/main/: AndroidManifest.xml
addons/themes/demo_ui_theme/src/main/: AndroidManifest.xml
api/src/main/res/values/: functional_key_codes.xml  keyboard_layout_api.xml  strings.xml
config/: lint.xml
docs/: FDROID.md  compatibility-checklist.md  monolith-inventory.md  newsoftkeyboard-refactor-plan.md  render-helpers.md  settings-migration-map.md  settings-taxonomy.md  ui-overhaul-analysis.md
engine-core/: build.gradle
engine-core/src/main/: AndroidManifest.xml
engine-neural/: build.gradle
engine-neural/src/main/: AndroidManifest.xml
engine-presage/: build.gradle  consumer-rules.pro
engine-presage/src/main/: AndroidManifest.xml
fdroid/: .env.example
fdroid/scripts/: publish.sh
gradle/: android_general.gradle  apk_module.gradle
ime/app/: build.gradle  proguard-anysoftkeyboard.txt
ime/app/src/main/: AndroidManifest.xml
ime/app/src/release/: AndroidManifest.xml
ime/fileprovider/src/main/: AndroidManifest.xml
ime/remote/src/main/: AndroidManifest.xml
ime/suggestions/presage/: CMakeLists.txt  build.gradle
ime/suggestions/presage/src/main/java/com/anysoftkeyboard/suggestions/presage/: PresageNative.java
ime/suggestions/presage/src/main/jni/: config.h  dirs.h  presage_bridge.cpp
outputs/fdroid/: wtf.uhoh.newsoftkeyboard.yaml
scripts/: generate_settings_taxonomy.py  gmsaas_start_and_install.sh  install_mike_rozoff.sh  setup_presage.sh  sync_suggestion_models.sh  sync_suggestion_models_internal.sh
scripts/fdroid/: check_keystore_env.sh  generate_metadata.py
tmp/presage/src-0.9.1/: Makefile.in  aclocal.m4  config.hin  configure
tmp/presage/src-0.9.1/apps/: Makefile.in
tmp/presage/src-0.9.1/apps/dbus/: Makefile.in  presage_dbus_python_demo  presage_dbus_python_demo.1  presage_dbus_service.1
tmp/presage/src-0.9.1/apps/gtk/: Makefile.in
tmp/presage/src-0.9.1/apps/notepad++/: Makefile.in
tmp/presage/src-0.9.1/apps/python/: Makefile.in  pypresagemate  pyprompter  pyprompter.1
tmp/presage/src-0.9.1/bindings/: Makefile.in
tmp/presage/src-0.9.1/bindings/c/: Makefile.in
tmp/presage/src-0.9.1/bindings/csharp/: Makefile.in
tmp/presage/src-0.9.1/bindings/python/: Makefile.in  presage_python_demo  presage_python_demo.1
tmp/presage/src-0.9.1/doc/: Makefile.in
tmp/presage/src-0.9.1/resources/: Makefile.in
tmp/presage/src-0.9.1/resources/arpa/: Makefile.in
tmp/presage/src-0.9.1/src/: Makefile.in
tmp/presage/src-0.9.1/test/: Makefile.in
(+663 files in other folders)
